Do not start a prover for suites that never ask one anything
Activation awaited startClient() unconditionally, so every suite blocked on a heap
load before its first assertion -- including the five that read nothing the prover
produces. suite16 and suite26 spent about 37s each to do a second of work.

isabelle.autoStart (default true, so nothing changes for a user who wants a
session) makes that declinable, and the runner writes it into the copied workspace
for suite4, suite16, suite19, suite21 and suite26. Workspace settings rather than
an env var, so nothing in the extension has to know it is under test: this is the
same switch a user flips.

It is a real setting rather than test scaffolding. Symbol rendering, symbol input,
the outline, folding and Ctrl+T are all client-side; opening a theory to read it,
or working on a machine with no Isabelle, should not cost a session start.

Full regression: 11/11 in 205s, from 305s. suite4 alone went 124s to 35s.

Also fixes a false failure in the runner itself. It required a SUITE*_OK marker,
but the early suites print STEP1_OK/STEP2_OK, so "suite" was reported as failing
while passing when run alone -- a marker check that invents failures is worse than
no marker check. It now matches the shape rather than the prefix.

GAPS records the mirror build recipe, and moves the -R fix from "unverified" to
verified: Isabelle/Scala compiles from the mirror tree with zero errors.