@@ -128,14 +128,18 @@ PIDE/query_output  -> find_theorems "_ + _" found 1239 theorem(s) (5 displayed)
 
 ### Reproducing the build
 
-No Mercurial and no component downloads are needed. The APIs the branch uses
+There are two routes, and which one applies depends on whether the change backports.
+
+#### Backporting a branch onto a released distribution
+
+No Mercurial and no component downloads are needed. The APIs the query branch uses
 (`Query_Operation`, `JSON.strings`, `Notification0`) all exist in Isabelle2025-2, so it
-backports onto a released distribution, which already has every component:
+backports onto a release, which already has every component:
 
 1. Copy the distribution (about 2.3 GB) and clear the read-only attributes robocopy
    preserves, or the sources cannot be edited.
-2. Apply the branch's three source changes plus the `etc/build.props` entry. That entry is
-   easy to miss and is what the source list is taken from; without it the module is not
+2. Apply the branch's source changes plus the `etc/build.props` entry. That entry is easy
+   to miss and is what the source list is taken from; without it the module is not
    compiled at all and `language_server.scala` fails with `Not found: type VSCode_Query`.
 3. `isabelle scala_build -f` in the copy.
 4. Point `isabelle.home` at the copy, set `isabelle.queryPanel`, and run `test/suite15.js`
@@ -143,11 +147,51 @@ backports onto a released distribution, which already has every component:
 
 The same recipe applies to `vscode-theories-panel`, driven by `test/suite17.js` with
 `ISABELLE_PATCHED_HOME` set. Both branches can be applied to one copy. Mind the four
-divergences listed above when backporting: they are compile errors, except
+divergences listed below when backporting: they are compile errors, except
 `PIDE/goto_command`, which fails silently at run time.
 
 Pin `ISABELLE_IDENTIFIER` for the copy so `ISABELLE_HOME_USER` does not overlap with the
 working installation's settings, preferences and heaps.
+
+#### Compiling the mirror tree itself
+
+Backporting stops working once a change depends on development-tree APIs, and it never
+type-checks the tree the change actually lives in. Compiling the mirror directly is
+possible without downloading the component set, by borrowing the release's, but four
+things get in the way and none of them are obvious:
+
+1. **Line endings.** With `core.autocrlf=true` -- the default on a Windows checkout --
+   every shell script in the tree is CRLF, and `bin/isabelle` dies at
+   ``syntax error near unexpected token `do'``. `git archive` honours autocrlf too, so
+   exporting needs it off explicitly:
+   `git -c core.autocrlf=false archive HEAD | tar -x -C <dest>`. This also keeps the
+   working tree untouched.
+2. **No components.** A source checkout has no `contrib/`: no JDK, no Scala, nothing. A
+   directory junction to a release's `contrib` supplies them, and the release's
+   `contrib/...` lines from its `etc/components` have to be appended to the tree's own
+   `etc/components`, which lists only built-in source components.
+3. **Version skew, in `etc/settings`.** The borrowed toolchain is older than the tree
+   expects (jdk-21 and scala-3.3.4 against the jdk-25 and scala-3.3.8 in
+   `Admin/components/main`), which shows up as two unrelated-looking failures:
+   `Unrecognized option: --sun-misc-unsafe-memory-access=allow`, a JDK 24+ flag in
+   `ISABELLE_JAVA_SYSTEM_OPTIONS`, and `25 is not a valid choice for
+   -java-output-version` in `ISABELLE_SCALAC_OPTIONS`. Dropping the flag and lowering the
+   target to 21 is enough.
+4. **The setup jar is a prebuilt component**, and `src/Tools/Setup/etc/build.props` says
+   `no_build = true`, so `scala_build` will not refresh it. The borrowed one predates the
+   tree's `Environment.java` and produces a genuinely baffling error --
+   `Found: Boolean | Null, Required: Boolean` on `Environment.is_windows()`, whose Java
+   signature is a primitive `boolean`. Under `-Yexplicit-nulls` an older jar's signature
+   reads as nullable. Compile the tree's own `src/Tools/Setup/src/*.java` (FlatLaf, in the
+   release's contrib, is needed for `GUI_Setup`), `jar cfe ... isabelle.setup.Setup`, and
+   point a local component at it rather than writing into the borrowed `contrib`.
+
+What remains excluded is `src/Pure/System/scalajs.scala`, which needs a Scala.js component
+the release does not ship, and with it `component_vscode_extension.scala` and its entry in
+`isabelle_tool.scala`. Both are packaging tools for the VSCodium extension; the language
+server references neither. So this route type-checks all of Isabelle/Scala except the
+Scala.js packaging path -- which is what a server-side change needs -- but it is not a
+substitute for a full component set if the change touches those files.
 
 ### Theories and Timing
 
@@ -554,10 +598,12 @@ Not verified:
 - **Linux and macOS.** Only the Windows/Cygwin launch path has actually started a prover.
   CI compiles the tree and runs the pure suites on both, which covers the platform
   branches in `serverPath` but not a real launch
-- **the merged `-R` fix, by compilation.** It is a clean three-line auto-merge whose one
-  changed expression is already used a few lines below, but the mirror tracks a newer
-  Isabelle revision than the installed release and is checked out with CRLF, so it cannot
-  be built in place. Verified by inspection only
+- ~~the merged `-R` fix, by compilation~~ -- **now verified**: Isabelle/Scala builds from
+  the mirror tree with zero errors and `lib/classes/isabelle.jar` carries
+  `Language_Server`, `LSP` and `VSCode_Theories`. See "Compiling the mirror tree itself"
+  above. The build stops afterwards on `isabelle_graphbrowser.jar` (`invalid source
+  release: 25`, javac given `-source 25` under the borrowed JDK 21), which is a Java
+  component the language server does not touch
 - **whether `ThemeIcon.color` reaches a quick pick.** `vscode.d.ts` documents it as
   "currently only used in `TreeItem`", so the recommended session's star may render in the
   default foreground rather than gold. The star itself renders either way
